# ESRconServer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RconServer.cpp  RconServer.h
.github/workflows/: ci.yml
src/: Main.cpp  Main.h
src/manager/: MainManager.cpp  MainManager.h
src/manager/config/: Config.h  ConfigManager.cpp  ConfigManager.h
src/rcon/: ConnectedClient.h  Server.cpp  Server.h
